<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinAFood</string>
    <string name="title_activity_pinned_food">Pinned Food</string>
    <string name="title_activity_add_pin">Add A Pin</string>
    <string name="hint_username">Username</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pin_details">PinDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_field_warning">This field should not be empty!</string>

</resources>
